<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    <string name="app_name">Bazunia</string>
    <string name="sensor_icon_description">Ikona czujnika</string>
    <string name="login_admin_username">admin</string>
    <string name="login_admin_password">admin</string>
    <string name="login_invalid_credentials">Nieprawidłowy login lub hasło</string>
    <string name="sensor_type_door_contact">door_contact</string>
    <string name="intent_extra_gateway_id">GATEWAY_ID</string>
    <string name="intent_extra_sensor_id">SENSOR_ID</string>
    <string name="sensor_detail_title">Dane dla Czujnika %1$s (Bramka %2$s)</string>
    <string name="threshold_min_label">Próg minimalny</string>
    <string name="threshold_max_label">Próg maksymalny</string>
    <string name="sensor_type_humidity">humidity</string>
    <string name="sensor_detail_no_data">Brak danych w bazie dla tego czujnika.</string>
    <string name="sensor_detail_type">Typ: %1$s</string>
    <string name="sensor_detail_value">Wartość: %1$s</string>
    <string name="sensor_detail_timestamp">Timestamp: %1$s</string>
    <string name="door_contact_open_value">1</string>
    <string name="sensor_history_item_format">[%1$s] Typ: %2$s, Wartość: %3$s</string>
    <string name="threshold_label_format" formatted="false">%s: %.1f</string>
    <string name="filter_mode_search">SEARCH</string>
    <string name="intent_extra_sensor_type">SENSOR_TYPE</string>
    <string name="data_refreshed_manually">Ręcznie odświeżono dane</string>
    <string name="clear_data_confirmation_title">Potwierdzenie</string>
    <string name="clear_data_confirmation_message">Czy na pewno chcesz trwale usunąć całą historię czujników? Tej operacji nie można cofnąć.</string>
    <string name="clear_data_positive_button">Tak, usuń</string>
    <string name="database_cleared">Baza danych wyczyszczona</string>
    <string name="dialog_cancel_button">Anuluj</string>
    <string name="filter_mode_type">TYPE</string>
    <string name="filter_mode_gateway">GATEWAY</string>
    <string name="all_types">Wszystkie typy</string>
    <string name="all_gateways">Wszystkie bramki</string>
    <string name="notification_permission_granted">Uprawnienia do powiadomień przyznane.</string>
    <string name="notification_permission_denied">Ostrzeżenie: Powiadomienia systemowe są wyłączone.</string>
    <string name="logout_confirmation_title">Wylogowanie</string>
    <string name="logout_confirmation_message">Czy na pewno chcesz się wylogować?</string>
    <string name="logout_positive_button">Tak, wyloguj</string>
    <string name="alert_summary">Uwaga! %1$d %2$s jest w stanie alarmu.</string>
    <string name="sensor_suffix_one">czujnik</string>
    <string name="sensor_suffix_few">czujniki</string>
    <string name="sensor_suffix_many">czujników</string>
    <string name="settings_content_description">Ustawienia</string>
    <string name="filter_content_description">Filtruj</string>
    <string name="refresh_content_description">Odśwież</string>
    <string name="clear_database_content_description">Wyczyść bazę</string>
    <string name="back_content_description">Powrót</string>
    <string name="app_logo_description">Logo aplikacji</string>
    <string name="monitoring_system_title">System Monitorowania</string>
    <string name="login_to_continue">Zaloguj się, aby kontynuować</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Hasło</string>
    <string name="login_button_text">Zaloguj się</string>
    <string name="logout_button_description">Wyloguj</string>
    <string name="all_sensors_title">Wszystkie czujniki</string>
    <string name="all_sensors_description">Przeglądaj listę czujników, historię i ustawiaj progi.</string>
    <string name="notification_icon_description">Ikona powiadomienia</string>
    <string name="sensor_data_title">Dane dla czujnika: </string>
    <string name="waiting_for_data">Oczekiwanie na dane…</string>
    <string name="reading_history_label">Historia odczytów (ostatnie 10):</string>
    <string name="filter_options_title">Opcje Filtrowania</string>
    <string name="search_by_id_label">Wyszukaj po ID (czujnika lub bramki)</string>
    <string name="search_by_id_hint">np. \'salon\' lub \'GW-01\'</string>
    <string name="filter_by_type_label">Filtruj po typie czujnika</string>
    <string name="filter_by_gateway_label">Filtruj po bramce</string>
    <string name="clear_filters_button">Wyczyść filtry</string>
    <string name="apply_button">Zastosuj</string>
    <string name="gateway_label">Bramka: %1$s</string>
    <string name="sensor_list_item_format">Czujnik %1$s (%2$s) - Ost. %3$s</string>
    <string name="gateway_icon_description">Ikona bramki</string>
    <string name="settings_appearance_title">Ustawienia Wyglądu</string>
    <string name="dark_mode_label">Tryb Ciemny</string>
    <string name="text_size_label">Rozmiar tekstu (Globalny)</string>
    <string name="text_size_small">Mały</string>
    <string name="text_size_medium">Średni (Domyślny)</string>
    <string name="text_size_large">Duży</string>
    <string name="button_size_label">Rozmiar przycisków (Ikony)</string>
    <string name="login_welcome_default">Witaj!</string>
    <string name="settings_title">Ustawienia</string>
    <string name="enable_2fa">Włącz Uwierzytelnianie Dwuskładnikowe (2FA)</string>
    <string name="disable_2fa">Wyłącz Uwierzytelnianie Dwuskładnikowe (2FA)</string>
    <string name="scan_qr_code">Zeskanuj ten kod QR w aplikacji Google Authenticator:</string>
    <string name="enter_2fa_code">Wpisz kod z aplikacji Authenticator:</string>
    <string name="verify_2fa_code">Weryfikuj kod</string>
    <string name="two_fa_setup_needed">Najpierw skonfiguruj 2FA</string>
    <string name="two_fa_verifying">Weryfikowanie kodu…</string>
    <string name="two_fa_enabled_success">2FA włączone pomyślnie!</string>
    <string name="two_fa_disabled_success">2FA wyłączone pomyślnie!</string>
    <string name="two_fa_error_generic">Błąd konfiguracji 2FA.</string>
    <string name="two_fa_invalid_code">Nieprawidłowy kod 2FA.</string>
    <string name="qr_code_content_desc">Kod QR do konfiguracji 2FA</string>
    <string name="status_2fa_enabled">Status 2FA: Włączone</string>
    <string name="status_2fa_disabled">Status 2FA: Wyłączone</string>
    <string name="login_2fa_title">Wymagane 2FA</string>
    <string name="login_2fa_subtitle">Otwórz aplikację Authenticator i wpisz kod:</string>
    <string name="login_2fa_verify_button">Zatwierdź kod</string>
    <string name="login_2fa_code_hint">Kod 2FA</string>
    <string name="settings_account_section_title">Ustawienia Konta i Bezpieczeństwo</string>
    <string name="settings_account_button">Zarządzaj Kontem (2FA)</string>
    <string name="copy_secret_key">Kopiuj klucz</string>
    <string name="enter_2fa_code_to_disable">Wprowadź kod z aplikacji, aby potwierdzić wyłączenie 2FA</string>
    <string name="language_label">Język aplikacji</string>
    <string name="language_polish">Polski</string>
    <string name="language_english">English</string>
    <string name="log_error_gateway_sensor_null">Gateway ID or Sensor ID is null. Finishing activity.</string>
    <string name="log_error_not_numeric">Wartość czujnika nie jest numeryczna: %1$s</string>
    <string name="log_error_no_token">BŁAD POBIERANIA: Brak zapisanego ID Tokena. Serwis czeka.</string>
    <string name="log_warn_token_rejected">OSTRZEZENIE: Token odrzucony przez serwer (kod: %1$d). Może wygasł.</string>
    <string name="log_warn_data_failed">OSTRZEZENIE: Pobieranie danych nieudane, kod: %1$d</string>
    <string name="log_error_db_query">Błąd pobierania najnowszych danych: %1$s</string>
    <string name="log_error_db_filter">Błąd filtrowania danych: %1$s</string>
    <string name="log_error_db_types">Błąd pobierania typów: %1$s</string>
    <string name="log_error_db_gateways">Błąd pobierania bramek: %1$s</string>
    <string name="alert_title_temp_humidity">Alert: [TYP] [ID]</string>
    <string name="error_numeric_parse">Nie można sparsować wartości sensora jako liczby: %1$s</string>
    <string name="disable_2fa_confirm">Potwierdź wyłączenie</string>
    <string name="sign_in_with_google">Zaloguj się przez Google</string>
    <string name="clear_data_confirmation_title_choose">Wybierz zakres czyszczenia</string>
    <string name="clear_option_local">Usuń lokalną historię (w telefonie)</string>
    <string name="clear_option_gateway">Usuń historię z bramki (serwera)</string>
    <string name="clear_local_confirmation_title">Potwierdź usunięcie lokalne</string>
    <string name="settings_data_cleanup_title">Zarządzanie Danymi i Historią</string>
    <string name="cleanup_local_label">Automatyczne czyszczenie lokalne</string>
    <string name="cleanup_days_hint">Dni do zachowania (0 = wyłącz)</string>
    <string name="cleanup_gateway_label">Automatyczne czyszczenie bramki (VPS)</string>
    <string name="notification_update_title">Dostępna Aktualizacja!</string>
    <string name="menu_rename">Zmień nazwę</string>
    <string name="menu_delete">Usuń</string>
    <string name="menu_add_to_folder">Dodaj do folderu…</string>
    <string name="menu_add_to_favorites">Dodaj do ulubionych</string>
    <string name="menu_remove_from_favorites">Usuń z ulubionych</string>
    <string name="menu_remove_from_folder">Usuń z folderu</string>
    <string name="menu_edit_folder">Edytuj folder</string>
    <string name="menu_delete_folder">Usuń folder</string>
    <string name="action_force_sync">Sprawdź poprawność przesyłu</string>
    <string name="settings_interval_title">Globalna częstotliwość pomiarów</string>
    <string name="settings_interval_desc">Ustawia interwał (60 s.) czujników.
    </string>
    <string name="settings_interval_hint">Interwał (sekundy)</string>
    <string name="settings_interval_save_button">Zapisz globalny interwał</string>
    <string name="action_check_battery">Sprawdź stan baterii</string>
    <string name="menu_disable_threshold_notifications">Wyłącz alerty wartości</string>
    <string name="menu_enable_threshold_notifications">Włącz alerty wartości</string>
    <string name="menu_disable_battery_notifications">Wyłącz alerty baterii</string>
    <string name="menu_enable_battery_notifications">Włącz alerty baterii</string>
    <string name="menu_disable_gateway_threshold_notifications">Wycisz alerty wartości w bramce</string>
    <string name="menu_enable_gateway_threshold_notifications">Włącz alerty wartości w bramce</string>
    <string name="menu_disable_gateway_battery_notifications">Wycisz alerty baterii w bramce</string>
    <string name="menu_enable_gateway_battery_notifications">Włącz alerty baterii w bramce</string>
    <string name="settings_notification_interval_title">Globalna częstotliwość powiadomień</string>
    <string name="settings_notification_interval_desc">Odstęp alertów czujnika.</string>
    <string name="settings_notification_interval_hint">Odstęp (minuty)</string>
    <string name="settings_notification_interval_save_button">Zapisz globalny odstęp</string>
    <string name="update_btn_close">Zamknij</string>
    <string name="update_prepare">Przygotowanie…</string>
    <string name="_0">0%</string>
    <string name="cleanup_size_label">Limit rozmiaru (Ilość rekordów)</string>
    <string name="cleanup_size_hint">Max rekordów (0 = bez limitu)</string>
    <string name="cleanup_request_send_button">Wyślij wniosek</string>
    <string name="dots3">…</string>
    <string name="menu_toggle_thresholds_title">Powiadomienia progowe</string>
    <string name="menu_toggle_battery_title">Powiadomienia baterii</string>
    <string name="settings_sharing_title">Udostępnianie Bramek</string>
    <string name="btn_sharing_settings">Zarządzaj udostępnianiem</string>
</resources>