<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_rename_gateway"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/menu_add_to_folder"
        android:title="@string/menu_add_to_folder" />

    <item
        android:id="@+id/menu_remove_gateway_from_folder"
        android:title="@string/menu_remove_from_folder" />

    <item
        android:id="@+id/menu_add_gateway_to_favorites"
        android:title="@string/menu_add_to_favorites" />
    <item
        android:id="@+id/menu_remove_gateway_from_favorites"
        android:title="@string/menu_remove_from_favorites" />
    <item
        android:id="@+id/menu_delete_gateway"
        android:title="@string/menu_delete" />
    <item
        android:id="@+id/action_force_sync"
        android:title="@string/action_force_sync" />
    <item
        android:id="@+id/action_check_battery"
        android:title="@string/action_check_battery" />
    <item
        android:id="@+id/menu_disable_gateway_threshold_notifications"
        android:title="@string/menu_disable_gateway_threshold_notifications" />
    <item
        android:id="@+id/menu_enable_gateway_threshold_notifications"
        android:title="@string/menu_enable_gateway_threshold_notifications" />
    <item
        android:id="@+id/menu_disable_gateway_battery_notifications"
        android:title="@string/menu_disable_gateway_battery_notifications" />
    <item
        android:id="@+id/menu_enable_gateway_battery_notifications"
        android:title="@string/menu_enable_gateway_battery_notifications" />
</menu>