<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_rename_sensor"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/menu_add_sensor_to_folder"
        android:title="@string/menu_add_to_folder" />

    <item
        android:id="@+id/menu_remove_sensor_from_folder"
        android:title="@string/menu_remove_from_folder" />

    <item
        android:id="@+id/menu_add_sensor_to_favorites"
        android:title="@string/menu_add_to_favorites" />
    <item
        android:id="@+id/menu_remove_sensor_from_favorites"
        android:title="@string/menu_remove_from_favorites" />
    <item
        android:id="@+id/action_check_battery"
        android:title="@string/action_check_battery" />
    <item
        android:id="@+id/menu_disable_threshold_notifications"
        android:title="@string/menu_disable_threshold_notifications" />
    <item
        android:id="@+id/menu_enable_threshold_notifications"
        android:title="@string/menu_enable_threshold_notifications" />
    <item
        android:id="@+id/menu_disable_battery_notifications"
        android:title="@string/menu_disable_battery_notifications" />
    <item
        android:id="@+id/menu_enable_battery_notifications"
        android:title="@string/menu_enable_battery_notifications" />
</menu>