<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit_folder"
        android:title="@string/menu_edit_folder" />
    <item
        android:id="@+id/menu_delete_folder"
        android:title="@string/menu_delete_folder" />

    <item
        android:id="@+id/action_force_sync"
        android:title="@string/action_force_sync" />
    <item
        android:id="@+id/action_check_battery"
        android:title="@string/action_check_battery" />

    <item
        android:id="@+id/menu_toggle_folder_threshold_notifications"
        android:title="@string/menu_toggle_thresholds_title" />
    <item
        android:id="@+id/menu_toggle_folder_battery_notifications"
        android:title="@string/menu_toggle_battery_title" />
</menu>