<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.SettingsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackSettings"
        style="?attr/myIconButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_content_description"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintTop_toBottomOf="@id/btnBackSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_appearance_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchThemeSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="@string/dark_mode_label"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_size_label"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
            <RadioGroup
                android:id="@+id/radioGroupTextScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radioTextSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:text="@string/text_size_small" />
                <RadioButton android:id="@+id/radioTextMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:text="@string/text_size_medium" />
                <RadioButton android:id="@+id/radioTextLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_size_large" />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/button_size_label"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
            <RadioGroup
                android:id="@+id/radioGroupButtonScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radioButtonSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:text="@string/text_size_small" />
                <RadioButton android:id="@+id/radioButtonMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:text="@string/text_size_medium" />
                <RadioButton android:id="@+id/radioButtonLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_size_large" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/language_label"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <RadioGroup
                android:id="@+id/radioGroupLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioLanguagePolish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/language_polish" />
                <RadioButton
                    android:id="@+id/radioLanguageEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_english" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="32dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/settings_interval_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/settings_interval_desc"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutGlobalInterval"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/settings_interval_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGlobalInterval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveGlobalInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings_interval_save_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/settings_notification_interval_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/settings_notification_interval_desc"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutGlobalNotificationInterval"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/settings_notification_interval_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editGlobalNotificationInterval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveGlobalNotificationInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings_notification_interval_save_button" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_account_section_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccountSettings"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/settings_account_button"
                app:icon="@drawable/ic_security" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_sharing_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSharingSettings"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_sharing_settings"
                app:icon="@drawable/ic_user_add" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_data_cleanup_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/cleanup_local_label"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cleanup_days_hint"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCleanupDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cleanup_size_label"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cleanup_size_hint"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCleanupSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="7" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/cleanup_gateway_label"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:id="@+id/txtCurrentServerSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dots3"
                android:layout_marginBottom="16dp"
                android:textColor="?android:attr/textColorSecondary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRequestRetentionChange"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="@string/cleanup_request_send_button"
                app:icon="@drawable/ic_settings_server" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>